# agent-memory-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_memory_gateway/: __init__.py  api.py  budget.py  cli.py  config.py  models.py  redis_store.py  service.py  store.py  store_factory.py  telemetry.py
src/agent_memory_gateway/adapters/: __init__.py  langchain.py  llamaindex.py
src/agent_memory_gateway/eval/: __init__.py  recall_eval.py
tests/: test_gateway.py  test_phase2.py
