[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-gateway"
version = "0.2.0"
description = "Unified memory API for AI agents — episodic, semantic, procedural memory with tenancy, TTL, and observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Agent Memory Gateway Contributors" }]
keywords = ["ai", "agents", "memory", "rag", "observability", "multi-tenancy"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
otel = ["opentelemetry-api>=1.28.0", "opentelemetry-sdk>=1.28.0"]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "fakeredis>=2.26.0"]

[project.scripts]
amg = "agent_memory_gateway.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/agent-memory-gateway"
Repository = "https://github.com/your-username/agent-memory-gateway"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]